# cybernode

./: README.md  devbox.json
backend/: Cargo.toml  README.md
backend/src/: lib.rs  main.rs
backend/src/api/: stats.rs
backend/src/simul/: broker.rs  mod.rs  msgs.rs  network.rs  node.rs  node_basic.rs  node_flex.rs  node_types.rs  node_web.rs  simulator.rs  trusted.rs  web.rs
backend/tests/: register_web.rs
frontend/: .gitignore  README.md  angular.json  package-lock.json  package.json  serve.js  test.js
frontend/src/: styles.scss
frontend/src/app/: app.component.html  app.component.scss  app.component.ts  app.routes.ts  connector.service.ts
frontend/src/app/blob/page/: page.component.html  page.component.ts
frontend/src/app/sidebars/popular/: popular.component.html  popular.component.scss  popular.component.ts
frontend/src/app/sidebars/status/: status.component.html  status.component.scss  status.component.ts
frontend/src/assets/: about.html  cybernode.html  test.html
frontend/src/assets/cybernode/: index.html
frontend/src/assets/ineiti/: index.html  timeline.html
frontend/src/assets/staticPages/cybernode/: about.html  contact.html  index.html  styles.css
frontend/src/assets/staticPages/ineiti/: index.html
frontend/src/environments/: environment.mock.ts  environment.ts
frontend/src/lib/: connect.backend.ts  connect.mock.ts  connect.ts  convert.ts  structs.ts
