[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
primitive-types = {version = "0.12.2", features = ["serde"] }
serde = "1.0.193"
utoipa = "4.1.0"
rand = "0.8.5"
tracing = "0.1.40"
assert_matches = "1.5.0"
ring = {version = "0.17.7", features = ["std"] }
byte-slice-cast = "1.2.2"
